[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GameOfLife.gd" type="Script" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/UITheme.tres" type="Theme" id=3]

[sub_resource type="InputEventAction" id=1]
action = "quit"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="GameOfLife" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopUI" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -123.0
margin_top = 11.0
margin_right = -17.0
margin_bottom = 167.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CanvasLayer/TopUI"]
margin_right = 106.0
margin_bottom = 20.0
text = "Restart (R)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/TopUI"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 44.0
shortcut = SubResource( 2 )
text = "Quit (Q)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSliderLabel" type="RichTextLabel" parent="CanvasLayer/TopUI"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
rect_min_size = Vector2( 50, 20 )
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "FPS: 10"
text = "FPS: 10"
scroll_active = false

[node name="HSlider" type="HSlider" parent="CanvasLayer/TopUI"]
margin_top = 72.0
margin_right = 106.0
margin_bottom = 88.0
min_value = 0.1
max_value = 60.0
step = 0.1
value = 10.0

[node name="AuthorLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -130.241
margin_top = -134.338
margin_right = -6.24097
margin_bottom = -4.33801
rect_min_size = Vector2( 50, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "By Rafael :)

Based on the Game of Life Automaton by John Conway."
text = "By Rafael :)

Based on the Game of Life Automaton by John Conway."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/TopUI/RestartButton" to="CanvasLayer/TopUI" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/TopUI/QuitButton" to="CanvasLayer/TopUI" method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="CanvasLayer/TopUI/HSlider" to="CanvasLayer/TopUI" method="_on_HSlider_value_changed"]
